Bug 101901 - [BAT][GVT-d] igt@debugfs_test@read_all_entries produces dmesg warnings
Summary: [BAT][GVT-d] igt@debugfs_test@read_all_entries produces dmesg warnings
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: highest critical
Assignee: krisman
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-24 16:01 UTC by Martin Peres
Modified: 2017-07-26 13:38 UTC (History)
1 user (show)

See Also:
i915 platform: BDW, SKL
i915 features:


Attachments
proposed fix (2.25 KB, patch)
2017-07-25 06:42 UTC, krisman
no flags Details | Splinter Review

Description Martin Peres 2017-07-24 16:01:06 UTC
The new test igt@debugfs_test@read_all_entries produces the following dmesg warnings when running on fi-bdw-gvtdvm and fi-skl-gvtdvm:

[   60.626475] unchecked MSR access error: RDMSR from 0x606 at rIP: 0xffffffffa0078f66 (i915_energy_uJ+0x36/0xb0 [i915])
[   60.626482] Call Trace:
[   60.626487]  seq_read+0xdc/0x3a0
[   60.626492]  full_proxy_read+0x4f/0x70
[   60.626496]  __vfs_read+0x23/0x120
[   60.626498]  ? putname+0x4f/0x60
[   60.626502]  ? rcu_read_lock_sched_held+0x75/0x80
[   60.626505]  ? entry_SYSCALL_64_fastpath+0x5/0xb1
[   60.626509]  vfs_read+0xa0/0x150
[   60.626512]  SyS_read+0x44/0xb0
[   60.626515]  entry_SYSCALL_64_fastpath+0x1c/0xb1
[   60.626517] RIP: 0033:0x7f1f5e9f4500
[   60.626519] RSP: 002b:00007ffc77e65cf8 EFLAGS: 00000246 ORIG_RAX: 0000000000000000
[   60.626522] RAX: ffffffffffffffda RBX: ffffffff8146e003 RCX: 00007f1f5e9f4500
[   60.626524] RDX: 0000000000000200 RSI: 00007ffc77e65d10 RDI: 0000000000000006
[   60.626526] RBP: ffffc900007abf88 R08: 0000000001eaff20 R09: 0000000000000000
[   60.626527] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000000
[   60.626529] R13: 0000000000000006 R14: 0000000000000005 R15: 0000000001eb94db
[   60.626533]  ? __this_cpu_preempt_check+0x13/0x20

Full logs:
 - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_2867/fi-bdw-gvtdvm/igt@debugfs_test@read_all_entries.html
 - https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_2867/fi-skl-gvtdvm/igt@debugfs_test@read_all_entries.html
Comment 1 krisman 2017-07-25 06:42:54 UTC
Created attachment 132946 [details] [review]
proposed fix

fixable by the attached patch.  I'm just waiting on -trybot confirmation before submitting to the list.
Comment 2 Martin Peres 2017-07-25 07:56:23 UTC
(In reply to krisman from comment #1)
> Created attachment 132946 [details] [review] [review]
> proposed fix
> 
> fixable by the attached patch.  I'm just waiting on -trybot confirmation
> before submitting to the list.

For documentation, the proposed fix seems to work: https://patchwork.freedesktop.org/series/27832/

Thanks for the swift fix proposal!
Comment 3 krisman 2017-07-25 18:36:26 UTC
(In reply to Martin Peres from comment #2)
> (In reply to krisman from comment #1)
> > Created attachment 132946 [details] [review] [review] [review]
> > proposed fix
> > 
> > fixable by the attached patch.  I'm just waiting on -trybot confirmation
> > before submitting to the list.

Submitted to intel-gfx. 

https://lists.freedesktop.org/archives/intel-gfx-trybot/2017-July/021872.html
Comment 4 Martin Peres 2017-07-25 20:22:23 UTC
Thanks for sending the patch out! However, please do not close a bug until the issue has been fixed in drm-tip.
Comment 5 Martin Peres 2017-07-26 13:38:39 UTC
(In reply to Martin Peres from comment #4)
> Thanks for sending the patch out! However, please do not close a bug until
> the issue has been fixed in drm-tip.

And now it is pushed, so we can close the bug. Thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.